[package]
name = "host-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
csv = "1.3.0"
ipnet = "2.9.0"
regex = "1.10.2"
structopt = "0.3.24"
tracing = "0.1.27"
tracing-subscriber = "0.3.18"
