[package]
name = "test-graphql-client"
version = "0.2.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"], default-features = false }
clap = { version = "4.1", features = ["derive", "wrap_help"] }
graphql_client = "0.12"
http = "0.2"
reqwest = { version = "0.11", features = ["rustls-tls"] }
rustls = "0.20"
rustls-pemfile = "1.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
