[package]
name = "test-rangeinclusive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ipnet = "2.7"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["restructuring", "estimation"]
restructuring = []
estimation = []
